@@ -1,5 +1,8 @@
 2020-07-21  Allen D. Ball  <ball@hcf.dev>
 
+	* Refactored SSDPDiscoverTask to SSDPTask and added <ssdp-listen/>
+	Ant Task and target.
+
 	* src/main/java/ball/upnp/ssdp/SSDPMessage.java:
 	Added toDatagramPacket(InetSocketAddress) method.
 
